k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ociauth-service
  namespace: default
  labels:
    app: ociauth
spec:
  selector:
    app: ociauth
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
